quorum/test/tests/other/Pass/ConstantTemplatedTypes.quorum
/*
Expected output:
1
2
3
1
2
3
1.0
2.0
3.0
*/

use Libraries.Containers.Array

class Main
    private constant Array<text> a1
    constant Array<integer> a2
    
    action Main
        constant Array<number> a3

        a1:Add("1")
        a1:Add("2")
        a1:Add("3")
        a2:Add(1)
        a2:Add(2)
        a2:Add(3)
        a3:Add(1)
        a3:Add(2.0)
        a3:Add(3.0)

        output a1:Get(0)
        output a1:Get(1)
        output a1:Get(2)
        output a2:Get(0)
        output a2:Get(1)
        output a2:Get(2)
        output a3:Get(0)
        output a3:Get(1)
        output a3:Get(2)
    end
end